# noc-ai-operator

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yaml
config/: config.example.yaml
src/: __init__.py  main.py
src/actions/: __init__.py
src/actions/ansible/: __init__.py
src/actions/kubernetes/: __init__.py  executor.py
src/adapters/: __init__.py
src/adapters/prometheus/: __init__.py
src/adapters/snmp/: __init__.py  poller.py  receiver.py
src/adapters/ssh/: __init__.py  executor.py
src/adapters/syslog/: __init__.py  receiver.py
src/ai/: __init__.py
src/ai/llm/: __init__.py  analyzer.py
src/ai/rag/: __init__.py  knowledge_base.py
src/api/: app.py
src/api/routes/: approvals.py  events.py  health.py  runbooks.py
src/core/: __init__.py  config.py  event_processor.py  models.py
src/dashboard/: __init__.py  router.py
src/dashboard/templates/: action_detail.html  base.html  dashboard.html  event_detail.html
src/dashboard/templates/partials/: actions_list.html  events_list.html  stats.html
src/workflows/: __init__.py  approval.py  slack.py
tests/: __init__.py  test_api.py  test_event_processor.py  test_models.py
